Behavior fix (#20)
* fix: improved sending system

* fix: synchroous actions

* fet: log killing entities

* fix: behavioral changes

* tweak: removed redundancy in prompt

* fix: shortened messages and fuxed null pointer error