@@ -1,6 +1,5 @@
 package net.bigyous.gptgodmc.GPT;
 
-import java.sql.Struct;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
@@ -18,7 +17,6 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
-import org.bukkit.event.Event;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.plugin.java.JavaPlugin;
 
@@ -34,6 +32,7 @@ import net.bigyous.gptgodmc.GPT.Json.Parameter;
 import net.bigyous.gptgodmc.GPT.Json.ToolCall;
 import net.bigyous.gptgodmc.interfaces.Function;
 import net.bigyous.gptgodmc.loggables.GPTActionLoggable;
+import net.bigyous.gptgodmc.utils.GPTUtils;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.TextComponent;
 import net.kyori.adventure.text.format.NamedTextColor;
@@ -49,25 +48,33 @@ public class GptActions {
     private int tokens = -1;
     private static Gson gson = new Gson();
 
-    private static Function<String> whisper = (String args) -> {
-        TypeToken<Map<String, String>> mapType = new TypeToken<Map<String, String>>() {
-        };
-        Map<String, String> argsMap = gson.fromJson(args, mapType);
-        Player player = GPTGOD.SERVER.getPlayerExact(argsMap.get("playerName"));
+    private static void whisper(String playerName, String message) {
+        Player player = GPTGOD.SERVER.getPlayerExact(playerName);
         player.sendRichMessage("<i>You hear something whisper to you...</i>");
-        player.sendMessage(argsMap.get("message"));
+        player.sendMessage(message);
         EventLogger.addLoggable(new GPTActionLoggable(
-                String.format("whispered \"%s\" to %s", argsMap.get("message"), argsMap.get("playerName"))));
-    };
-    private static Function<String> announce = (String args) -> {
-        TypeToken<Map<String, String>> mapType = new TypeToken<Map<String, String>>() {
-        };
-        Map<String, String> argsMap = gson.fromJson(args, mapType);
+                String.format("whispered \"%s\" to %s", message, playerName)));
+    }
+
+    private static void announce(String message) {
         GPTGOD.SERVER.broadcast(Component.text("A Loud voice bellows from the heavens", NamedTextColor.YELLOW)
                 .decoration(TextDecoration.BOLD, true));
-        GPTGOD.SERVER.broadcast(Component.text(argsMap.get("message"), NamedTextColor.LIGHT_PURPLE)
+        GPTGOD.SERVER.broadcast(Component.text(message, NamedTextColor.LIGHT_PURPLE)
                 .decoration(TextDecoration.BOLD, true));
-        EventLogger.addLoggable(new GPTActionLoggable(String.format("announced \"%s\"", argsMap.get("message"))));
+        EventLogger.addLoggable(new GPTActionLoggable(String.format("announced \"%s\"", message)));
+    }
+
+    private static Function<String> sendMessage = (String args) -> {
+        TypeToken<Map<String, String>> mapType = new TypeToken<Map<String, String>>() {
+        };
+        Map<String, String> argsMap = gson.fromJson(args, mapType);
+        String message = argsMap.get("message");
+        if (argsMap.containsKey("playerName") && argsMap.get("playerName") != null && !argsMap.get("playerName").isBlank()) {
+            whisper(argsMap.get("playerName"), message);
+            return;
+        } else {
+            announce(message);
+        }
     };
     private static Function<String> giveItem = (String args) -> {
         JsonObject argObject = JsonParser.parseString(args).getAsJsonObject();
@@ -136,42 +143,37 @@ public class GptActions {
                 : false;
         List<ItemStack> items = itemNames.stream().map((String itemName) -> {
             Material mat = Material.matchMaterial(itemName);
-            if(mat == null){
+            if (mat == null) {
                 return new ItemStack(Material.COBWEB);
             }
             return new ItemStack(mat, fullStacks ? mat.getMaxStackSize() : 1);
         }).toList();
         Location playerLoc = GPTGOD.SERVER.getPlayer(playerName).getLocation();
-        Bukkit.getScheduler().runTask(JavaPlugin.getPlugin(GPTGOD.class), () -> {
-            Block currentBlock = WorldManager.getCurrentWorld()
-                    .getBlockAt(playerLoc
-                            .offset(playerLoc.getDirection().getBlockX() + 1, 0,
-                                    playerLoc.getDirection().getBlockZ() + 1)
-                            .toLocation(null));
-            currentBlock.setType(Material.CHEST);
-            Chest chest = (Chest) currentBlock.getState();
-            chest.getBlockInventory().addItem(items.toArray(new ItemStack[itemNames.size()]));
-            chest.open();
-            WorldManager.getCurrentWorld().spawnParticle(Particle.WAX_OFF, chest.getLocation().toCenterLocation(), 100,
-                    2,
-                    3, 2);
-            EventLogger.addLoggable(new GPTActionLoggable(String.format("summoned a chest with: %s inside next to %s",
-                    String.join(", ", itemNames), playerName)));
-        });
+        Block currentBlock = WorldManager.getCurrentWorld()
+                .getBlockAt(playerLoc
+                        .offset(playerLoc.getDirection().getBlockX() + 1, 0,
+                                playerLoc.getDirection().getBlockZ() + 1)
+                        .toLocation(null));
+        currentBlock.setType(Material.CHEST);
+        Chest chest = (Chest) currentBlock.getState();
+        chest.getBlockInventory().addItem(items.toArray(new ItemStack[itemNames.size()]));
+        chest.open();
+        WorldManager.getCurrentWorld().spawnParticle(Particle.WAX_OFF, chest.getLocation().toCenterLocation(), 100,
+                2,
+                3, 2);
+        EventLogger.addLoggable(new GPTActionLoggable(String.format("summoned a chest with: %s inside next to %s",
+                String.join(", ", itemNames), playerName)));
 
     };
     private static Function<String> transformStructure = (String args) -> {
         JsonObject argObject = JsonParser.parseString(args).getAsJsonObject();
         String structure = gson.fromJson(argObject.get("structure"), String.class);
         String blockType = gson.fromJson(argObject.get("block"), String.class);
-
-        Bukkit.getScheduler().runTask(JavaPlugin.getPlugin(GPTGOD.class), () -> {
-            StructureManager.getStructure(structure).getBlocks()
-                    .forEach((Block b) -> b.setType(Material.matchMaterial(blockType)));
-            EventLogger.addLoggable(
-                    new GPTActionLoggable(
-                            String.format("turned all the blocks in Structure %s to %s", structure, blockType)));
-        });
+        StructureManager.getStructure(structure).getBlocks()
+                .forEach((Block b) -> b.setType(Material.matchMaterial(blockType)));
+        EventLogger.addLoggable(
+                new GPTActionLoggable(
+                        String.format("turned all the blocks in Structure %s to %s", structure, blockType)));
 
     };
     private static Function<String> revive = (String args) -> {
@@ -211,13 +213,11 @@ public class GptActions {
         EventLogger.addLoggable(new GPTActionLoggable(String.format("detonated Structure: %s", structure)));
     };
     private static Map<String, GptFunction> functionMap = Map.ofEntries(
-            Map.entry("whisper", new GptFunction("whisper", "send a private message to a player",
-                    Map.of("playerName", new Parameter("string", "name of the Player"),
-                            "message", new Parameter("string", "message")),
-                    whisper)),
-
-            Map.entry("announce", new GptFunction("announce", "announce a message to every player",
-                    Collections.singletonMap("message", new Parameter("string", "message")), announce)),
+            Map.entry("sendMessage", new GptFunction("sendMessage",
+                    "send a message, you can specify a player to privately send a message or you can omit the player to brodcast to the whole server. Limit messages to 150 characters, Avoid repeating things that have already been said.",
+                    Map.of("playerName", new Parameter("string", "(optional) name of the player to privately send to"),
+                            "message", new Parameter("string", "the message")),
+                    sendMessage)),
 
             Map.entry("giveItem", new GptFunction("giveItem", "give a player any amount of an item",
                     Map.of("playerName", new Parameter("string", "name of the Player"),
@@ -247,7 +247,7 @@ public class GptActions {
                                     "(optional) custom name that will be gives to the spawned entities, set to null to leave entities unnamed")),
                     spawnEntity)),
             Map.entry("summonSupplyChest", new GptFunction("summonSupplyChest",
-                    "spawn chest full of items next to a player",
+                    "spawn chest full of items for use in a project next to a player",
                     Map.of("items",
                             new Parameter("array",
                                     "names of the minecraft items you would like to put in the chest, each item takes up one of 8 slots",
@@ -277,7 +277,7 @@ public class GptActions {
     private static GptTool[] tools;
     private static GptTool[] actionTools;
     private static GptTool[] speechTools;
-    private static final List<String> speechActionKeys = Arrays.asList("announce", "whisper");
+    private static final List<String> speechActionKeys = Arrays.asList("sendMessage");
 
     public static GptTool[] wrapFunctions(Map<String, GptFunction> functions) {
         GptFunction[] funcList = functions.values().toArray(new GptFunction[functions.size()]);
@@ -297,12 +297,14 @@ public class GptActions {
     }
 
     public static GptTool[] GetActionTools() {
-        if (actionTools != null && actionTools[0] != null) {
-            return actionTools;
+        if (actionTools == null || actionTools[0] == null) {
+            actionFunctionMap.keySet().removeAll(speechActionKeys);
+            actionFunctionMap.keySet().remove("command");
+            actionTools = wrapFunctions(actionFunctionMap);
         }
-        actionFunctionMap.keySet().removeAll(speechActionKeys);
-        actionTools = wrapFunctions(actionFunctionMap);
-        return actionTools;
+        GptTool[] newTools = GPTUtils.randomToolSubset(actionTools, 4);
+        newTools[newTools.length - 1] = new GptTool(functionMap.get("command"));
+        return newTools;
     }
 
     public static GptTool[] GetSpeechTools() {
@@ -338,7 +340,9 @@ public class GptActions {
 
     public static int run(String functionName, String jsonArgs) {
         GPTGOD.LOGGER.info(String.format("running function \"%s\" with json arguments \"%s\"", functionName, jsonArgs));
-        functionMap.get(functionName).runFunction(jsonArgs);
+        Bukkit.getScheduler().runTask(JavaPlugin.getPlugin(GPTGOD.class), () -> {
+            functionMap.get(functionName).runFunction(jsonArgs);
+        });
         return 1;
     }
 
@@ -355,7 +359,9 @@ public class GptActions {
         GptResponse responseObject = gson.fromJson(response, GptResponse.class);
         for (Choice choice : responseObject.getChoices()) {
             for (ToolCall call : choice.getMessage().getTool_calls()) {
-                functions.get(call.getFunction().getName()).runFunction(call.getFunction().getArguments());
+                Bukkit.getScheduler().runTask(JavaPlugin.getPlugin(GPTGOD.class), () -> {
+                    functions.get(call.getFunction().getName()).runFunction(call.getFunction().getArguments());
+                });
             }
         }
     }
